test/Fail/Issue1258-2.err
Issue1258-2.agda:38.9-13: error: [UnequalTerms]
Foo _28 != Bool of type Set
when checking that the expression refl has type
f (Bool × Wrap Nat) (true , wrap zero) ==
f (Stuck × Stuck) (Beta , Beta)
